# MicrophoneArrayFirstOrderAmbisonic

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pr-agent.yml  publish-test-results.yml
configs/data/: 32khz.yaml
configs/models/: Conformer.yaml  UNet.yaml
configs/training/: base.yaml
data/: hdf5_dataset.py
models/: __init__.py
models/conformer/: Conformer.py  __init__.py  convs.py  encoders.py
models/layers/: __init__.py  activations.py  convs.py  feedforwards.py  norms.py  positional.py
models/unet/: UNet.py  __init__.py
notebooks/: generate_rirs.ipynb
projects/: schedulers.py  train.py  train_module.py
scripts/: train.sh
tests/: test_audio_and_losses.py  test_complex.py  test_configs.py  test_masking.py
utils/: audio.py  complex.py  configs.py
utils/losses/: __init__.py  spectrogram.py  utils.py  wav.py
utils/masking/: __init__.py  masking.py
